--- a/Illuminationn/app/src/main/res/values/strings.xml
+++ b/Illuminationn/app/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_connected">Connected</string>
     <string name="button_field">connect</string>
+    <string name="text_field">Please enter your row number</string>
 
+    <color name="actionbar_background">#303f9f</color>
+    <color name="actionbar_text">#ffffff</color>
 </resources>
